whitelisting the frontend url